Fixed icon problems
class="icon-github" leads to the icon not being displayed, no idea why
Created new problem, Icon in mobile too large
project.html now has mailto and github.com/sunny.io in footer nav

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
   --secondary-color: #000;
   --gradient-top-color: rgb(131, 200, 218);
   --gradient-bottom-color: rgb(2, 78, 97);
+  --contrast-gradient-bottom-color:rgb(191,191,191);
   --font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans,
     Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   
@@ -223,6 +224,9 @@ footer {
   width: 100vw;
   display: flex;
   justify-content: space-between;
+  color:var(--contrast-gradient-bottom-color);
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 footer ul li {
@@ -470,7 +474,7 @@ a:hover {
 }
 
 .network ul li a .svg-icon path {
-  fill: var(--secondary-color);
+  fill: var(--contrast-gradient-bottom-color);
   -webkit-transition: 1s;
   transition: 1s;
 }
